--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="/images/im3.png">
+            <img src="images/im3.png">
             <div class="card-content">
                 <h2 class="card-title">Jan Losert</h2>
                 <div class="card-stats">
@@ -291,7 +291,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="/images/im4.png" alt="Card Image">
+            <img src="images/im4.png" alt="Card Image">
             <div class="card-content">
                 <h2 class="card-title">Mattias Johansson</h2>
                 <div class="card-stats">
@@ -305,7 +305,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="/images/im5.png">
+            <img src="images/im5.png">
             <div class="card-content">
                 <h2 class="card-title">Ruslan Siiz</h2>
                 <div class="card-stats">
@@ -319,7 +319,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="/images/im7.png">
+            <img src="images/im7.png">
             <div class="card-content">
                 <h2 class="card-title">Paperpillar</h2>
                 <div class="card-stats">
@@ -333,7 +333,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="/images/im8.png">
+            <img src="images/im8.png">
             <div class="card-content">
                 <h2 class="card-title">Alfrey Davilla | vaneltia</h2>
                 <div class="card-stats">
@@ -347,7 +347,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="/images/im9.png">
+            <img src="images/im9.png">
             <div class="card-content">
                 <h2 class="card-title">A Studio-JQ A</h2>
                 <div class="card-stats">
@@ -361,7 +361,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="/images/im10.png">
+            <img src="images/im10.png">
             <div class="card-content">
                 <h2 class="card-title">Romain Trystram</h2>
                 <div class="card-stats">
@@ -375,7 +375,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="/images/im111.png">
+            <img src="images/im111.png">
             <div class="card-content">
                 <h2 class="card-title">inFullMobile</h2>
                 <div class="card-stats">
@@ -389,7 +389,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="/images/im12.png">
+            <img src="images/im12.png">
             <div class="card-content">
                 <h2 class="card-title">FourPlus Studio</h2>
                 <div class="card-stats">
@@ -403,7 +403,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="/images/im13.png">
+            <img src="images/im13.png">
             <div class="card-content">
                 <h2 class="card-title">MUTI</h2>
                 <div class="card-stats">
@@ -417,7 +417,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="/images/im14.png">
+            <img src="images/im14.png">
             <div class="card-content">
                 <h2 class="card-title"></h2>
                 <div class="card-stats">
@@ -431,7 +431,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="/images/im15.png">
+            <img src="images/im15.png">
             <div class="card-content">
                 <h2 class="card-title"></h2>
                 <div class="card-stats">
@@ -445,7 +445,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="/images/im16.png">
+            <img src="images/im16.png">
             <div class="card-content">
                 <h2 class="card-title"></h2>
                 <div class="card-stats">
@@ -459,7 +459,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="/images/im11.png">
+            <img src="images/im11.png">
             <div class="card-content">
                 <h2 class="card-title"></h2>
                 <div class="card-stats">
@@ -487,7 +487,7 @@
             </div>
         </div>
         <div class="card ">
-            <img src="/images/im21.png ">
+            <img src="images/im21.png ">
             <div class="card-content ">
                 <h2 class="card-title "></h2>
                 <div class="card-stats ">
